zhy-frame-route/zhy-frame-route-gateway/src/main/resources/v1-IDeploy-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
    service: gateway
  name: gateway
  namespace: default
spec:
  ports:
    - name: gateway
      port: 8888
  selector:
    app: gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway
    version: v1
  name: gateway-v1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: false
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: 9901
      labels:
        app: gateway
        version: v1
    spec:
      containers:
        - image: 192.168.1.181:5000/frame/frame-gateway-support:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          name: gateway
          ports:
            - containerPort: 8888
      hostAliases: []
