zhy-frame-route/zhy-frame-route-gateway/src/main/resources/all-IGateway-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*.gateway.com'
      port:
        name: http
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway
  namespace: default
spec:
  gateways:
    - gateway
  hosts:
    - www.gateway.com
  http:
    - retries:
        attempts: 3
        perTryTimeout: 3s
      route:
        - destination:
            host: gateway
            port:
              number: 8888
            subset: v1
      timeout: 9s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gateway
  namespace: default
spec:
  host: gateway
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1024
        http2MaxRequests: 2048
        maxRequestsPerConnection: 200
        maxRetries: 3
      tcp:
        connectTimeout: 3s
        maxConnections: 2048
    outlierDetection:
      baseEjectionTime: 3m
      consecutiveErrors: 3
      interval: 3s
      maxEjectionPercent: 100
